watershed-kernel/tests/compile_fail/task_state_rejects_dead_variants.rs
use watershed_distributary::dag::TaskState;

fn main() {
    let _done = TaskState::Done;
    let _reviewed_fail = TaskState::ReviewedFail;
    let _closed = TaskState::Closed;
}
