watershed-kernel/tests/compile_fail/task_state_rejects_dead_variants.stderr
error[E0599]: no variant or associated item named `Done` found for enum `TaskState` in the current scope
 --> $WORKSPACE/tests/compile_fail/task_state_rejects_dead_variants.rs
  |
  |     let _done = TaskState::Done;
  |                            ^^^^ variant or associated item not found in `TaskState`
  |
help: there is a method `ne` with a similar name
 --> $RUST/core/src/cmp.rs

error[E0599]: no variant or associated item named `ReviewedFail` found for enum `TaskState` in the current scope
 --> $WORKSPACE/tests/compile_fail/task_state_rejects_dead_variants.rs
  |
  |     let _reviewed_fail = TaskState::ReviewedFail;
  |                                     ^^^^^^^^^^^^ variant or associated item not found in `TaskState`
  |
help: there is a variant with a similar name
  |
5 -     let _reviewed_fail = TaskState::ReviewedFail;
5 +     let _reviewed_fail = TaskState::ReviewedPass;
  |

error[E0599]: no variant or associated item named `Closed` found for enum `TaskState` in the current scope
 --> $WORKSPACE/tests/compile_fail/task_state_rejects_dead_variants.rs
  |
  |     let _closed = TaskState::Closed;
  |                              ^^^^^^ variant or associated item not found in `TaskState`
